tests/NormalTests/paczka1/fuzzy1/37911714.err
Error in line 5: S813 S813 7,9
Error in line 15: rp57gUZBJ9 S813 -1,4
Error in line 19: S813 A578 17,6
Error in line 22: ysk9N S813 8,2
Error in line 9: rp57gUZBJ9 S813 10,8
Error in line 25: rp57gUZBJ9 A584 56,2
Error in line 23: ysk9N S790 69,1
Error in line 35: rp57gUZBJ9 S813 46,9
